# ctf4science

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml
ctf4science/: data_module.py  tune_module.py
data/KS_Official/train/: X10train.mat  X4train.mat  X5train.mat  X9train.mat
data/Lorenz_Official/train/: X10train.mat  X1train.mat  X2train.mat  X3train.mat  X4train.mat  X5train.mat  X6train.mat  X7train.mat  X8train.mat  X9train.mat
data/ODE_Lorenz/test/: X1test.mat  X2test.mat  X3test.mat  X4test.mat  X5test.mat  X6test.mat  X8test.mat  X9test.mat
data/ODE_Lorenz/train/: X10train.mat  X1train.mat  X2train.mat  X3train.mat  X4train.mat  X5train.mat  X6train.mat  X7train.mat  X8train.mat  X9train.mat
data/PDE_KS/train/: X10train.mat  X4train.mat  X5train.mat  X9train.mat
docs/: datasets.md  getting_started.md
notebooks/: plot_KS.ipynb
